# cscarcopula

./: CMakeLists.txt  compile.sh  generate_pdf.sh  main.cpp  readme.md
risk_data/: cvar_data.csv
src/: auxiliary.cpp  auxiliary.h  copula.cpp  copula.h  marginals.cpp  marginals.h  risk_metrics.cpp  risk_metrics.h
src/backup/: auxiliary.h  copula.h  marginals.h  risk_metrics.h
src/backup/io/: data.h
src/backup/pdf/: generated_pdf.h  py_to_cpp_code_generation.py
src/backup/sampler/: mle.h  scar-ou.h
src/io/: data.cpp  data.h
src/pdf/: generated_pdf.cpp  generated_pdf.h  py_to_cpp_code_generation.py
src/sampler/: mle.cpp  mle.h  scar-ou.cpp  scar-ou.h
